2009-02-09  Bart Veer  <bartv@ecoscentric.com>

	* cdl/i2c.cdl, src/i2c.cxx, doc/i2c.sgml: I2C buses now initialize
	at a fixed priority CYG_INIT_BUS_I2C, instead of a configurable
	priority with default CYG_INIT_DRIVERS.

	doc/i2c.sgml: remove a spurious & in the bitbang description.
	
2008-12-30  John Dallaway  <john@dallaway.org.uk>

	* cdl/i2c.cdl: Reference per-package documentation.

2005-06-30  Bart Veer  <bartv@ecoscentric.com>

	* src/i2c.cxx (cyg_i2c_init): remove incorrect const

2005-05-11  Bart Veer  <bartv@ecoscentric.com>

	* include/i2c.h: add a CYG_HAL_TABLE_TYPE to the bus data
	structure to allow for architectures with alignments > 4 bytes.

2005-04-28  Peter Korsgaard  <jacmet@sunsite.dk>

	* doc/i2c.sgml: Corrected cyg_i2c_rx, cyg_i2c_transaction_rx and	
	xyzzy_i2c_rx prototype. Removed continuation character in
	CYG_I2C_DEVICE example.

2005-04-28  Peter Korsgaard  <jacmet@sunsite.dk>
 
 	* src/i2c.cxx: Corrected DEBUG macro.
 
2005-04-28  Peter Korsgaard  <jacmet@sunsite.dk>
 
 	* src/i2c.cxx: Renamed cyg_i2c_stop to cyg_i2c_transaction_stop to
 	match header file.	
 
2005-04-21  Andrew Lunn  <andrew.lunn@ascom.ch>

	* doc/i2c.sgml: Replaced a _ with a - to keep jade happy.

2005-03-03  Bart Veer  <bartv@ecoscentric.com>

	* src/i2c.cxx: cope with ports which define HAL_DELAY_US() in
	hal_diag.h instead of hal_intr.h

2004-10-05  Bart Veer  <bartv@ecoscentric.com>

	* Generic I2C package created

//===========================================================================
// ####GPLCOPYRIGHTBEGIN####                                                
// -------------------------------------------                              
// This file is part of eCos, the Embedded Configurable Operating System.   
// Copyright (C) 2004, 2005, 2009 Free Software Foundation, Inc.                  
//
// This program is free software; you can redistribute it and/or modify     
// it under the terms of the GNU General Public License as published by     